<resources>
    <string name="app_name">RagFair</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Confirm">Confirm</string>
    <string name="Decline">Decline</string>
    <string name="lot_name">name</string>
    <string name="lot_description">description</string>
    <string name="lot_price">price</string>
    <string name="contac_phone">contact phone number</string>
    <string name="Delete">Delete</string>
    <string name="Buy">Buy</string>
    <string name="Beck">Back</string>
    <string name="Back">Back</string>
    <string name="product_name">Product name</string>
    <string name="txtViewDescription">Description</string>
    <string name="select_picture">select picture</string>
</resources>
