<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/viewImageProduct"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewName"
        android:layout_weight="0.1"
        android:hint="@string/product_name"
        android:textColor="@color/black_de"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/set_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.56"
        android:hint="@string/txtViewDescription"
        android:textColor="@color/black_de"
        android:textStyle="bold"
        android:textSize="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewPrice"
        android:hint="@string/lot_price"
        android:layout_weight="0.1"
        android:textColor="@color/black_de"
        android:textStyle="bold"
        android:textSize="18dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewPhone"
        android:hint="@string/contac_phone"
        android:layout_weight="0.1"
        android:textColor="@color/black_de"
        android:textStyle="bold"
        android:textSize="18dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backBtn"
            android:text="@string/Back"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

</LinearLayout>