<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_name"
        android:hint="@string/lot_name"
        android:layout_weight="0.07"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/oval"
        android:paddingBottom="5dp"
        android:textColorHint="@color/white"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/set_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:paddingLeft="16dp"
        android:hint="@string/lot_description"
        android:background="@drawable/oval"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColorHint="@color/white"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/set_image"
        android:layout_weight="0.07"/>
    <Button
        android:id="@+id/load_image_btn"
        android:layout_gravity="center"
        android:text="load image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_price"
        android:hint="@string/lot_price"
        android:layout_weight="0.07"
        android:paddingLeft="16dp"
        android:background="@drawable/oval"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColorHint="@color/white"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_phone"
        android:hint="@string/contac_phone"
        android:layout_weight="0.07"
        android:paddingLeft="16dp"
        android:background="@drawable/oval"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColorHint="@color/white"
        android:textStyle="bold"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirmBtn"
            android:text="@string/Confirm"
            android:textStyle="bold"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/declineBtn"
            android:text="@string/Decline"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/confirmBtn"
            android:layout_toEndOf="@+id/confirmBtn"
            android:textStyle="bold"/>
    </RelativeLayout>

</LinearLayout>